base/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
        - name: api
          image: xxxxxxxxxx.dkr.ecr.us-west-2.amazonaws.com/api:latest
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 300
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 30
            failureThreshold: 5
          ports:
            - name: api
              containerPort: 3000
