base/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
    - port: 80
      name: "api80"
      targetPort: 3000
      protocol: TCP
  selector:
    name: api
